--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/hooks": "^7.4.1",
+    "@tanstack/react-query": "^5.17.9",
     "lucide-react": "^0.308.0",
     "next": "14.0.4",
     "react": "^18",
