feat(product-details-page): Implemented dynamic content with Image Carousel component
- Broke Down static site build into components
- Added data flow to the component tree and dynamic render based on props
- Created Carousel component for product images
- Added dependency: Headless UI for accessible Dialog and animations
- Added dependencies: clsx & tailwind-merge for tailwind classname merge
- Added reusable custom Button component

--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@mantine/hooks": "^7.4.1",
     "@tanstack/react-query": "^5.17.9",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.308.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
