--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@mantine/hooks": "^7.4.1",
     "@tanstack/react-query": "^5.17.9",
     "clsx": "^2.1.0",
+    "firebase": "^10.7.1",
     "lucide-react": "^0.308.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
