--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.2.0",
     "zustand": "^4.4.7"
   },
