--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^1.0.12",
     "@headlessui/react": "^1.7.18",
     "@mantine/hooks": "^7.4.1",
     "@tanstack/react-query": "^5.17.9",
     "clsx": "^2.1.0",
     "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
     "lucide-react": "^0.308.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
